# honest-opens

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ALGORITHM.md  CALIBRATION.md  ESP_DATA_GUIDE.md  IAB_EMAIL_MEASUREMENT_STANDARD.md  VALIDATION.md
examples/: quickstart.py
honest_opens/: __init__.py  __main__.py  benchmark.py  classifier.py  cli.py  io.py  models.py  thresholds.py  validation.py
tests/: test_classifier.py
